5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1758_1576.log
== TEST (2019-05-23 11:11:28) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
		
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:12:17) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
		i=i+1
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:12:21) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
		i=i+1
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:14:40) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
		i=i+1
	else:	
		msg="empate"
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:23:49) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
		i=i+1
	else:	
		msg="empate"
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:24:14) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
		i=i+1
	else:	
		msg="empate"
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:24:58) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
		
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
794.459
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:24:59) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
		
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
788.331
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:24:59) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
		i=i+1
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
759.023
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:24:59) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
		i=i+1
	else:	
		msg="empate"
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
616.438
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:24:59) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
		i=i+1
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
765.804
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:24:59) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
		
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
787.796
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:25:00) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
		i=i+1
	else:	
		msg="empate"
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:27:36) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
	i=i+1
	else:	
		msg="empate"
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
elif(vb==ve):
	print("EMPATE")
-- EXECUTION TIME:
0.310487
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 14
    else:	
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:27:54) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
	i=i+1
	else:	
		msg="empate"
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.387079
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 14
    else:	
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:27:56) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
	i=i+1
	else:	
		msg="empate"
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
File "XXXX", line 14
    else:	
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:28:05) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
	i=i+1
	
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:28:09) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
	i=i+1
	
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
2.13016
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
entre com o vetor:entre com o vetor:12
EUSAPIA
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
entre com o vetor:entre com o vetor:12
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:28:11) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
	i=i+1
	
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
1.5245
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
entre com o vetor:entre com o vetor:10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:28:14) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
	i=i+1
	
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
2.73861
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:34:18) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
		i=i+1
	else:	
		msg="empate"
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
565.488
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:09:38) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
	i=i+1
	
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:09:52) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
	i=i+1
	
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:10:00) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
	i=i+1
	
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:10:35) 
-- CODE:
from numpy import*
e=array(eval(input("entre com o vetor:")))
b=array(eval(input("entre com o vetor:")))
print(size(e))
i=0
ve=0
vb=0
while(i<size(e)):
	if(e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11 ) or(e[i]==33 and b[i]==22):
		ve=ve+1
	elif(e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22 ) or(e[i]==22 and b[i]==33):
		vb=vb+1
	i=i+1
	
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.593986
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:24:03) 
-- CODE:
from numpy import*

e=array(eval(input("entre com o vetor da eusapia:")))
b=array(eval(input("entre com o vetor da barsanulfo:")))

print(size(eu))

i=0
ve=0
vb=0

while(i<size(eu)):
	if((e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11) or (e[i]==33 and b[i]==22)):
		ve=ve+1
	elif((e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22) or (e[i]==22 and b[i]==33)):
		vb=vb+1

if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.420974
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1576/main.py", line 6, in <module>
    print(size(eu))
NameError: name 'eu' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:24:16) 
-- CODE:
from numpy import*

e=array(eval(input("entre com o vetor da eusapia:")))
b=array(eval(input("entre com o vetor da barsanulfo:")))

print(size(eu))

i=0
ve=0
vb=0

while(i<size(eu)):
	if((e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11) or (e[i]==33 and b[i]==22)):
		ve=ve+1
	elif((e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22) or (e[i]==22 and b[i]==33)):
		vb=vb+1

if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:24:58) 
-- CODE:
from numpy import*

e=array(eval(input("entre com o vetor da eusapia:")))
b=array(eval(input("entre com o vetor da barsanulfo:")))

print(size(e))

i=0
ve=0
vb=0

while(i<size(e)):
	if((e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11) or (e[i]==33 and b[i]==22)):
		ve=ve+1
	elif((e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22) or (e[i]==22 and b[i]==33)):
		vb=vb+1

if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:38:18) 
-- CODE:
from numpy import*

e=array(eval(input("entre com o vetor da eusapia:")))
b=array(eval(input("entre com o vetor da barsanulfo:")))

print(size(e))

i=0
ve=0
vb=0

while(i<size(e)):
	if((e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11) or (e[i]==33 and b[i]==22)):
		ve=ve+1
	elif((e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22) or (e[i]==22 and b[i]==33)):
		vb=vb+1

if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
elif(ve==vb):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:39:42) 
-- CODE:
from numpy import*

e=array(eval(input("entre com o vetor da eusapia:")))
b=array(eval(input("entre com o vetor da barsanulfo:")))

print(size(e))

i=0
ve=0
vb=0

while(i<size(e)):
	if((e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11) or (e[i]==33 and b[i]==22)):
		ve=ve+1
	elif((e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22) or (e[i]==22 and b[i]==33)):
		vb=vb+1
	i=i+1
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
elif(ve==vb):
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:39:44) 
-- CODE:
from numpy import*

e=array(eval(input("entre com o vetor da eusapia:")))
b=array(eval(input("entre com o vetor da barsanulfo:")))

print(size(e))

i=0
ve=0
vb=0

while(i<size(e)):
	if((e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11) or (e[i]==33 and b[i]==22)):
		ve=ve+1
	elif((e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22) or (e[i]==22 and b[i]==33)):
		vb=vb+1
	i=i+1
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
elif(ve==vb):
	print("EMPATE")
-- EXECUTION TIME:
2.64285
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:40:22) 
-- CODE:
from numpy import*

e=array(eval(input("entre com o vetor da eusapia:")))
b=array(eval(input("entre com o vetor da barsanulfo:")))

print(size(e))

i=0
ve=0
vb=0

while(i<size(e)):
	if((e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11) or (e[i]==33 and b[i]==22)):
		ve=ve+1
	elif((e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22) or (e[i]==22 and b[i]==33)):
		vb=vb+1
	i=i+1
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
elif(ve==vb):
	print("EMPATE")
-- EXECUTION TIME:
2.18072
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:41:04) 
-- CODE:
from numpy import*

e=array(eval(input("entre com o vetor da eusapia:")))
b=array(eval(input("entre com o vetor da barsanulfo:")))

print(size(e))

i=0
ve=0
vb=0

while(i<size(e)):
	if((e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11) or (e[i]==33 and b[i]==22)):
		ve=ve+1
	elif((e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22) or (e[i]==22 and b[i]==33)):
		vb=vb+1

if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
968.76
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:43:04) 
-- CODE:
from numpy import*

e=array(eval(input("entre com o vetor da eusapia:")))
b=array(eval(input("entre com o vetor da barsanulfo:")))

print(size(e))

i=0
ve=0
vb=0

while(i<size(e)):
	if((e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11) or (e[i]==33 and b[i]==22)):
		ve=ve+1
	elif((e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22) or (e[i]==22 and b[i]==33)):
		vb=vb+1

	if(ve>vb):
		print("EUSAPIA")
	elif(vb>ve):
		print("BARSANULFO")
	else:
		print("EMPATE")
-- EXECUTION TIME:
957.65
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:01:34) 
-- CODE:
from numpy import*

e=array(eval(input("entre com o vetor da eusapia:")))
b=array(eval(input("entre com o vetor da barsanulfo:")))

print(size(e))

i=0
ve=0
vb=0

while(i<size(e)):
	if((e[i]==11 and b[i]==33) or (e[i]==22 and b[i]==11) or (e[i]==33 and b[i]==22)):
		ve=ve+1
	elif((e[i]==33 and b[i]==11) or (e[i]==11 and b[i]==22) or (e[i]==22 and b[i]==33)):
		vb=vb+1
	i=i+1
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
elif(ve==vb):
	print("EMPATE")
-- EXECUTION TIME:
0.380679
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
